--- a/clase_HTML/index.html
+++ b/clase_HTML/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>GLOBBIT</title> <!--El titulo que aparece en la pestaña-->
+    <title>GLOBBIT</title>
+    <!--El titulo que aparece en la pestaña-->
 </head>
+
 <body>
-    <h1>GLOBBIT la mejor tienda de globos online</h1> <!--<hn>cuanto mas chico n, mas grande el titulo, n toma valores de 1 a 6</hn>-->
-    <div> 
+    <h1>GLOBBIT la mejor tienda de globos online</h1>
+    <!--<hn>cuanto mas chico n, mas grande el titulo, n toma valores de 1 a 6</hn>-->
+    <div>
         <p>hola mundo,</p>
         <p>testeo salto de linea</p>
     </div>
-    
-    <a href=#>Testeo de Hipervinculos</a> <!-- <a href="aca va el link al archivo o pagina"> y aca el texto que va a guardar ese link</a>-->
+
+    <a href=#>Testeo de Hipervinculos</a>
+    <!-- <a href="aca va el link al archivo o pagina"> y aca el texto que va a guardar ese link</a>-->
     <h3>Ingredientes:</h3>
-    <ul> <!--Listas sin numeros-->
+    <ul>
+        <!--Listas sin numeros-->
         <li>Huevos</li>
         <li>Harina</li>
-        
+
     </ul>
     <h3>Procedimiento:</h3>
-    <ol> <!--Listas enumeradas-->
+    <ol>
+        <!--Listas enumeradas-->
         <li>Paso medir ingredientes</li>
         <li>Paso mezclar ingredientes</li>
         <li>Paso cocinar al horno</li>
         <li>Paso comer</li>
     </ol>
 </body>
+
 </html>
+asasasa
