Agregadas 5 secciones, imagenes, css para organizar las imagenes en columnas.

--- a/clase_HTML/index.html
+++ b/clase_HTML/index.html
@@ -12,30 +12,18 @@
 
 <body>
     <h1>GLOBBIT la mejor tienda de globos online</h1>
-    <!--<hn>cuanto mas chico n, mas grande el titulo, n toma valores de 1 a 6</hn>-->
-    <div>
-        <p>hola mundo,</p>
-        <p>testeo salto de linea</p>
-    </div>
 
-    <a href=#>Testeo de Hipervinculos</a>
-    <!-- <a href="aca va el link al archivo o pagina"> y aca el texto que va a guardar ese link</a>-->
-    <h3>Ingredientes:</h3>
+        <p>
+            
+        </p>
+
     <ul>
-        <!--Listas sin numeros-->
-        <li>Huevos</li>
-        <li>Harina</li>
-
+        <li><a href="secciones/seccion_globos.html">Modelos de globos</a></li>
+        <li><a href="secciones/seccion_promociones.HTML">Promociones</a></li>
+        <li><a href="secciones/seccion_historia.HTML">Historia</a></li>
+        <li><a href="secciones/seccion.mision.HTML">Mision</a></li>
+        <li><a href="secciones/seccion_contacto.HTML">Contacto</a></li>
     </ul>
-    <h3>Procedimiento:</h3>
-    <ol>
-        <!--Listas enumeradas-->
-        <li>Paso medir ingredientes</li>
-        <li>Paso mezclar ingredientes</li>
-        <li>Paso cocinar al horno</li>
-        <li>Paso comer</li>
-    </ol>
 </body>
 
 </html>
-asasasa
