Agregado un catalogo base (3 imagenes con precio en el Index principal), agregado el div index y row en el style principal. Agregadas preguntas y respuestas basicas

--- a/clase_HTML/index.html
+++ b/clase_HTML/index.html
@@ -12,11 +12,50 @@
 
 <body>
     <h1>GLOBBIT la mejor tienda de globos online</h1>
+    <div>
+        <!--Inicio bloque de informacion-->
+        <h3>¿Que vendemos?</h3>
+        <p>Vendemos globos, tipicos como los, rojos, amarillos, azules. Pero tambien vendemos globos terraqueos entre
+            otros.</p>
+        <h3>¿Cuando se fundo la empresa?</h3>
+        <p>Se fundo el 26/9/2022, pero para mas informacion revisar la pagina de <a
+                href="secciones/seccion.mision.HTML"> historia </a></p>
+        <div class="row">
+            <!--Inicio bloque de fila-->
+            <h3>CATALOGO</h3>
+            <div class="column">
+                <!--Inicio bloque de columna 1-->
+                <figure>
+                    <img src="C:\Users\Thiago\Desktop\Proyectos Generacion T\Imagenes\globo amarillo.jpeg"
+                        alt="Un globo amarillo" height="225" width="225" title="globo amarillo">
+                    <figcaption>Precio: $20</figcaption>
+                </figure>
+            </div>
+            <!--Final bloque de columna 1-->
+            <div class="column">
+                <!--Inicio bloque de columna 2-->
+                <figure>
+                    <img src="C:\Users\Thiago\Desktop\Proyectos Generacion T\Imagenes\globo azul.jpeg"
+                        alt="Un globo amarillo" height="225" width="225" title="globo azul">
+                    <figcaption>Precio: $20</figcaption>
+                </figure>
+            </div>
+            <!--Final bloque de columna 2-->
+            <div class="column">
+                <!--Inicio bloque de columna 3-->
+                <figure>
+                    <img src="C:\Users\Thiago\Desktop\Proyectos Generacion T\Imagenes\globo rojo.jpeg"
+                        alt="Un globo amarillo" height="225" width="225" title="globo rojo">
+                    <figcaption>Precio: $20</figcaption>
+                </figure>
+            </div>
+            <!--Final bloque de columna 3-->
 
-        <p>
-            
-        </p>
+        </div>
+        <!--Final bloque de fila-->
 
+    </div>
+    <!--Final bloque de informacion-->
     <ul>
         <li><a href="secciones/seccion_globos.html">Modelos de globos</a></li>
         <li><a href="secciones/seccion_promociones.HTML">Promociones</a></li>
