Dibujo de pancho usando css y divs, pagina de starwars en inicios

--- a/clase_HTML/index.html
+++ b/clase_HTML/index.html
@@ -66,3 +66,6 @@
 </body>
 
 </html>
+
+
+<!--Agregar globos en paralex, subir archivos de pancho y starwars(falta decorar), hacer una tabla con precios e items.-->
