Agregados nuevos archivos de Bootstrap y carpeta de pruebas con js

--- a/clase_HTML/index_tabla.html
+++ b/clase_HTML/index_tabla.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <!--
         <p><table>
         <tr>
             <th>DIA</th>
@@ -39,12 +39,13 @@
         </tr>
         </tr>
     </table> </p>
-
+-->
 <div id="uno" class="pan"></div>
 <div id="dos"></div>
 <div id="tres" class="pan"></div>
 </body>
-<form action="Informe.php" target="_blank">
+<!--
+    <form action="Informe.php" target="_blank">
 <label>Email: <input type="email" name="Email-Usuario" placeholder="Ingrese Email" required></label>
 <label for="Nombre">Nombre y apellido: </label> <input type="text" id="Nombre" placeholder="Ingrese su nombre y apellido" name="Nombre-apellido" required>
 <label for="ComidaFav">Elegi tu comida favorita:</label>
@@ -54,7 +55,9 @@
     <option value="fid">Fideos</option>
     <option value="tac">Tacos</option>
     <option value="tor">Tortilla</option>
+    <option value="pcho">Pancho</option>
 </select>
 <p><input type="submit" placeholder="Enviar"></p>
 </form>
+-->
 </html>
