--- a/Clases y proyectos varios/Grids/index.html
+++ b/Clases y proyectos varios/Grids/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biografia</title>
+    <title>GRID</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h2>Nombre y apellido:</h2>
-    <h4>Thiago Krivonosoff Basualdo</h4>
-    <h2>Nombre del docente:</h2>
-    <h4>Agustina Ramos</h4>
+    
 </body>
 </html>
