--- a/Clases y proyectos varios/secciones/seccion_contacto.HTML
+++ b/Clases y proyectos varios/secciones/seccion_contacto.HTML
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biografia</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>Nombre y apellido:</h2>
-    <h4>Thiago Krivonosoff Basualdo</h4>
-    <h2>Nombre del docente:</h2>
-    <h4>Agustina Ramos</h4>
+    <a href="../index.html">volver</a> 
 </body>
 </html>
